static/recipe.css
li {
    margin-bottom: 0.5em;
}

.recipe {
    display: grid;
    grid-template-columns: 1fr 2fr;
    column-gap: 2em;
}

.title input {
    font-size: 1.5em;
    margin-bottom: 0.5em;
}

.actions {
    grid-column: 1;
}

.actions ul {
    list-style: none;
    padding: 0;
    display: grid;
    margin: 0;
    grid-template-columns: 1fr 1fr;
    column-gap: 0.5em;
}

.actions button {
    width: 100%;
}

.info {
    grid-column: 2;
}

.ingredients {
    grid-column: 1;
}

.instructions {
    grid-column: 2;
}

.review {
    padding: 0.5em;
    margin: 1em;
}

